--- a/StarCraft.API/StarCraft.API/wwwroot/public/index.html
+++ b/StarCraft.API/StarCraft.API/wwwroot/public/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <div style="width: 200px; height: 100px; background: black;">
+    <div class="root"></div>
+    <div style="width: 500px; height: 100px; background: black;">
         
     </div>
 
