--- a/StarCraft.API/StarCraft.API/wwwroot/public/index.html
+++ b/StarCraft.API/StarCraft.API/wwwroot/public/index.html
@@ -8,13 +8,7 @@
 </head>
 
 <body>
-    <div class="root"></div>
-    <div style="width: 500px; height: 100px; background: black;">
-        
-    </div>
-
-    <script src="src/test.js"></script>
-    <script src="src/index.js"></script>
+    <div id="root"></div>
 </body>
 
 </html>
